--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/thaisminas/aula_0802_cesar_school#readme",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "express": "^4.17.2",
-    "express-routes": "^1.0.1"
+    "express-routes": "^1.0.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8"
   }
 }
